fix: docs dark mode

--- a/apps/documentation/src/styles/globals.css
+++ b/apps/documentation/src/styles/globals.css
@@ -17,8 +17,8 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: #0a0a0a;
+  background: white;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -37,12 +37,6 @@ a {
 
 h2 {
   margin-bottom: 12px;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@450&display=swap');
